fix: UI recipe detail truncate

--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,6 @@ header{
 /* dropdowns container */
 
 .dropdowns-container {
-    height: 4rem;
     margin: 20px 0;
     color: white;
     font-size: 18px;
@@ -113,7 +112,7 @@ header{
 }
 
 .dropdown__content {
-    height: 100%;
+    height: 4rem;
     width: 200px;
     background: var(--blue);
     border-radius: 5px;
@@ -240,16 +239,22 @@ header{
     display: flex;
     justify-content: space-between;
     font-size: 18px;
+    gap: 10px
 }
 .recipes__details__header h1 {
     font-weight: 400;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 .recipes__details__header-time {
     display: flex;
     align-items: center;
     gap: .5rem;
     font-weight: 700;
-    flex-wrap: nowrap;
+}
+.recipes__details__header-time p {
+    white-space: nowrap;
 }
 
 /* Recipe card description */
@@ -259,17 +264,19 @@ header{
     display: flex;
     line-height: 12px;
     padding: 2px;
-    overflow-y: hidden;
+
 }
 .recipes__details__info-ingredient {
     flex: 1;
 }
 .recipes__details__info-description {
     flex: 1;
-    line-height: 11px;
     font-family: 'Roboto', sans-serif;
+    display: -webkit-box;
+    -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
-
 
 .noRecipeView {
     width: 100%;
